# proyecto-ia

./: .gitignore  Cargo.toml
benches/: bnqueens.rs
src/: lib.rs  main.rs
